chore: consistency in formatting

--- a/docs/features/plugin/migration/index.mdx
+++ b/docs/features/plugin/migration/index.mdx
@@ -125,7 +125,9 @@ from open_webui.routers.openai import generate_chat_completion
 from open_webui.main import chat_completion
 ```
 
+::tip
 **💡 Pro Tip:** Prioritize the unified endpoint (`chat_completion`) for simplicity and future compatibility.
+:::
 
 ### 📝 **Additional Note: Choosing Between `main.chat_completion` and `utils.chat.generate_chat_completion`**
 
