--- a/docs/troubleshooting/sso.mdx
+++ b/docs/troubleshooting/sso.mdx
@@ -13,7 +13,10 @@ Most OAUTH flows require the application's external URL ("redirect URI") so the 
 ✅ Solution:
 - Navigate to: **Admin Settings > General**
 - Ensure your **WebUI URL** field is filled in and points to your deployed instance (e.g., `https://yourwebui.yourdomain.com`)
+
+::tip
 📌 Tip: Check for typos! OAUTH is strict—URLs must match exactly, including `https://`.
+:::
 
 ---
 
@@ -61,7 +64,9 @@ ENABLE_OAUTH_SIGNUP=true
   - If self-hosting, confirm these variables are present in your Docker Compose, Kubernetes manifest, or `.env` file
 - Restart your backend/app after changing variables so the new values are loaded
 
+::tip
 📌 Tip: Most OAUTH errors (loops, 401s, unresponsiveness) are due to an environment variable incorrectly named, missing entirely, or using outdated variable names!
+:::
 
 ---
 
@@ -140,7 +145,9 @@ Sometimes the issue is with the identity provider (e.g., Google, Okta, Auth0, Az
 ❌ Wrong: https://ai.company.com/callback
 ```
 
+::tip
 📌 Tip: When in doubt, recheck your provider registration and regenerate client secrets if needed.
+:::
 
 ---
 
@@ -173,7 +180,9 @@ location ~* ^/(api|oauth|callback|login|ws|websocket) {
 }
 ```
 
+:::warning
 📌 Warning: Never cache OAUTH or login endpoints! Caching can "poison" the session or deliver stale tokens, causing bizarre auth errors.
+:::
 
 ---
 
