--- a/docs/features/plugin/functions/filter.mdx
+++ b/docs/features/plugin/functions/filter.mdx
@@ -275,8 +275,9 @@ def inlet(self, body: dict, __user__: Optional[dict] = None) -> dict:
 📖 **What Happens?**
 - Before: `"How can I debug this issue!!!"` ➡️ Sent to the model as `"How can I debug this issue"`
 
+:::note
 Note: The user feels the same, but the model processes a cleaner and easier-to-understand query.
-
+:::
 
 ##### 📊 How `inlet` Helps Optimize Input for the LLM:
 - Improves **accuracy** by clarifying ambiguous queries.
