--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -56,7 +56,9 @@ See [their docs](https://lemonade-server.ai/) for details.
 
 4. Click Save.
 
+::tip
 *Tip: If running Open WebUI in Docker and your model server on your host machine, use `http://host.docker.internal:<your-port>/v1`.*
+:::
 
 ##### **For Lemonade:**  When adding Lemonade, use `http://localhost:8000/api/v0` as the URL.
 
