--- a/docs/troubleshooting/password-reset.mdx
+++ b/docs/troubleshooting/password-reset.mdx
@@ -19,7 +19,9 @@ First, you need to create a bcrypt hash of your new password. Run the following 
 htpasswd -bnBC 10 "" your-new-password | tr -d ':\n'
 ```
 
+:::note
 **Note:** The output will include a bcrypt hash with special characters that need to be handled carefully. Any `$` characters in the hash will need to be triple-escaped (replaced with `\\\`) to be used correctly in the next step.
+:::
 
 ### Step 2: Update the Password in Docker 🔄
 
@@ -126,9 +128,8 @@ Once you’ve located the file, remove it using a command similar to:
    rm -rf /path/to/your/python/environment/lib/pythonX.X/site-packages/open_webui/data/webui.db
 ```
 
+:::warning
 **Warning:** Deleting `webui.db` will remove all stored data, including user accounts, settings, and passwords. Only do this if you truly want to start fresh!
-
-        
-
+:::
 
 📖 By following these straightforward steps, you'll regain access to your Open WebUI admin account in no time. If you encounter any issues during the process, please consider searching for your issue on forums or community platforms.
