--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -21,7 +21,9 @@ import PythonUpdating from './tab-python/PythonUpdating.md';
 
 <TopBanners />
 
-:::info **Important Note on User Roles and Privacy:**
+:::info
+
+**Important Note on User Roles and Privacy:**
 
 - **Admin Creation:** The first account created on Open WebUI gains **Administrator privileges**, controlling user management and system settings.
 - **User Registrations:** Subsequent sign-ups start with **Pending** status, requiring Administrator approval for access.
