chore: format part 2

--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -3,7 +3,6 @@ sidebar_position: 4
 title: "🌍 Environment Variable Configuration"
 ---
 
-
 ## Overview
 
 Open WebUI provides a large range of environment variables that allow you to customize and configure
@@ -1070,7 +1069,7 @@ If `OFFLINE_MODE` is enabled, this `ENABLE_VERSION_UPDATE_CHECK` flag is always 
 - OAuth authentication providers
 - Web search and RAG with external APIs
 
-Read more about `offline mode` in this [guide](/docs/tutorials/offline-mode.md).
+Read more about `offline mode` in this [guide](/docs/tutorials/offline-mode).
 
 :::
 
@@ -3447,7 +3446,6 @@ If `OAUTH_PICTURE_CLAIM` is set to `''` (empty string), then the OAuth picture c
 - Description: Sets the label of the LDAP server.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
-
 #### `LDAP_SERVER_HOST`
 
 - Type: `str`
@@ -3881,7 +3879,6 @@ If the endpoint is an S3-compatible provider like MinIO that uses a TLS certific
 - Type: `str`
 - Description: Set the access key for Azure Storage.
   - Optional - if not provided, credentials will be taken from the environment. User credentials if run locally and Managed Identity if run in Azure services.
-
 
 ### OpenTelemetry Configuration
 
